[ Login ] » Estilos actualizados

--- a/src/app/componentes/login/login.component.scss
+++ b/src/app/componentes/login/login.component.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: url('~src/assets/img/uk1.jpg') no-repeat center;
+    background: url('~src/assets/img/uk1gray.jpg') no-repeat center;
     background-size: cover;
     height: 100vh;
     min-height: 500px;
