--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -2,7 +2,7 @@
 
 #sidebar {
     background: $primary;
-    background: url('~src/assets/img/uk2.jpg') no-repeat center;
+    background: url('~src/assets/img/uk2gray.jpg') no-repeat center;
     background-size: cover;
     position: fixed;
     top: 0;
