[ Gramática ] » Contenido actualizado

--- a/src/app/componentes/gramatica/gramatica.component.html
+++ b/src/app/componentes/gramatica/gramatica.component.html
@@ -116,8 +116,6 @@
 
                 <h2>Like, love, hate y prefer</h2>
 
-                <p>Después de estos verbos lo más común es utilizar gerundio</p>
-                <p>No obstante, es posible utilizar infinitivo + to y gerundio</p>
                 <p>Utilizamos gerundio para hablar en general</p>
 
                 <div class="ejemplos">
@@ -132,6 +130,7 @@
                     <p>I <u>like to swim</u> first thing in the morning when there aren't many people</p>
                     <p>You don't need to give me a lift to the station, I <u>prefer to walk</u></p>
                 </div>
+                <small>En el segundo ejemplo dice que prefiere caminar en ese caso en concreto, pero no en general</small>
 
                 <p>No obstante, utilizamos infinitivo + to si cualquiera de estos verbos fuera seguido de <span>would</span></p>
 
@@ -140,41 +139,50 @@
                     <p>I'd prefer to stay at home tonight</p>
                 </div>
 
-                <h2>Ambos</h2>
+                <h2>Infinitivo y gerundio sin que el significado varíe</h2>
 
-                <p>Utilizamos infinitive + to o gerund con los siguientes verbos:</p>
-
-                <div class="ejemplos">
-                    <p>It started to rain / It started raining</p>
-                    <p>Remember to lock the door / I remember going to Italy as a child</p>
-                    <p>Sorry, I forgot to do it / I will never forget seeing the Taj Mahal</p>
-                    <p>I tried to open the window / Try calling her on her mobile</p>
-                </div>
-
-                <p>Cuando los verbos son begin, start y continue, podemos utilizar infinitive + to o gerund sin que su significado varíe</p>
+                <p>Utilizamos cualquiera de los dos cuando los verbos son begin, start y continue</p>
 
                 <div class="ejemplos">
+                    <p>I began to learn languages when I was ten / I began learning languages when I was ten</p>
                     <p>It started to rain / It started raining</p>
                     <p>He continues to work in the company / He contiues working in the company</p>
-                    <p>You need to clean the car / </p>
                 </div>
 
-                <p>No obstante, en algunos casos el significado puede variar</p>
+                <h2>Infinitivo y gerundio variando el significado</h2>
+
+                <p>Cuando el verbo es <span>remember</span>, utilizamos infinitivo cuando primero recordamos algo y luego lo hacemos, mientras que utilizamos gerundio cuando primero hacemos algo y luego lo recordamos</p>
+
+                <div class="ejemplos">
+                    <p>Remember to lock the door</p>
+                    <p>I remember going to Italy as a child</p>
+                </div>
+
+                <p>Cuando el verbo es <span>try</span>, utilizamos infinitivo cuando hacemos el esfuerzo para conseguir algo, mientras que utilizamos gerundio cuando vamos a probar algo a ver si funciona</p>
+
+                <div class="ejemplos">
+                    <p>I tried to open the window, but it was locked</p>
+                    <p>I have an idea! Try calling her on her mobile</p>
+                </div>
+
+                <p>Cuando el verbo es <span>forget</span>, utilizamos infinitivo cuando queremos decir que no hemos recordado hacer algo, mientras que utilizamos gerundio cuando queremos decir que hicimos algo que no podemos olvidar</p>
+
+                <h2>Infinitivo y gerundio variando la gramática</h2>
+
+                <p>Cuando el verbo es <span>need</span>, al utilizar gerundio la oración se convierte en pasiva</p>
+
+                <div class="ejemplos">
+                    <p>You need to clean the car</p>
+                    <p>The car needs cleaning (the car needs to be cleaned)</p>
+                    <p class="error">You need cleaning the car<sup><i class="fa fa-times-circle-o" aria-hidden="true"></i></sup></p>
+                </div>
+
+                <p>Cuando el verbo es <span>learn</span>, al utilizar gerundio el verbo actúa como sustantivo</p>
 
                 <div class="ejemplos" style="margin-bottom: 0">
-                    <p>Remember + infinitive » Primero recuerdas, luego haces algo (Remember to lock the door. Recuerda que debes cerrar la puerta y luego la cierras)</p>
-                    <p>Remember + gerund » Primero haces algo, luego lo recuerdas (I remember going to Italy as a child. Primero fuiste a Italia y luego lo recordaste)</p>
-                    <p>Forget + infinitive » No recordaste hacer algo (I forgot to do it)</p>
-                    <p>Forget + gerund » Hiciste algo que no puedes olvidar (I will never forget seeing the Taj Mahal)</p>
-                    <p>Try + infinitive » Hacer el esfuerzo para conseguir algo (I tried to open the window)</p>
-                    <p>Try + gerund » Prueba a ver si algo funciona (Try calling her on her mobile)</p>
-                    <p>Need + infinitive » Algo que necesitas o que necesitas hacer (You need to clean the car)</p>
-                    <p>Need + gerund » Es, por narices, una pasiva (The car needs cleaning (passive voice) = The car needs to be cleaned)</p>
-                    <p class="error">The car needs to clean<sup><i class="fa fa-times-circle-o" aria-hidden="true"></i></sup></p>
+                    <p>He learned to ride horses</p>
+                    <p>He learned horse riding</p>
                 </div>
-
-                <p>he learned to ride horses</p>
-                <p>he learned horse riding (en gerundio, el verbo actúa como sustantivo)</p>
 
             </ng-container>
 
@@ -220,7 +228,7 @@
 
             <ng-container *ngSwitchCase="'past-modals'">
 
-                <p>Se utiliza <b>ought to / should have + verb in past participle</b> cuando creemos que alguien no hizo lo correcto o para expresar o arrepentimiento</p>
+                <p>Se utiliza <b>ought to / should have + verb in past participle</b> cuando creemos que alguien no hizo lo correcto o para expresar arrepentimiento</p>
 
                 <div class="ejemplos">
                     <p>It's my fault. I ought to have told you earlier that my mother was coming.</p>
